# NoesisGUI-Java

./: .gitignore
.github/workflows/: build.yml
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/dev/sixik/noesisgui/: NoesisGui.java
java/src/main/java/dev/sixik/noesisgui/nscore/: NSBaseComponent.java  NSBaseObject.java  NSBaseRefCounted.java  NSDependencyObject.java  NSDispatcherObject.java  NSICommand.java  NSIView.java  NSLogHandler.java  NSSymbol.java  NSType.java
java/src/main/java/dev/sixik/noesisgui/nsdrawing/: NSColor.java  NSCornerRadius.java  NSInt32Rect.java  NSPoint.java  NSPoint3D.java  NSPoint4D.java  NSPointi.java  NSRect.java  NSRecti.java  NSSize.java  NSSizei.java
java/src/main/java/dev/sixik/noesisgui/nsgui/: NSBaseButton.java  NSBaseDefinition.java  NSBaseFreezableCollection.java  NSBaseTextBox.java  NSBaseTrigger.java  NSBold.java  NSBrush.java  NSBrushShader.java  NSBrushes.java  NSButton.java  NSCanvas.java  NSCheckBox.java  NSColumnDefinition.java  NSColumnDefinitionCollection.java  NSComboBox.java  NSCommandBinding.java  NSCommandBindingCollection.java  NSCompositionUnderline.java  NSContentControl.java  NSControl.java  NSControlTemplate.java  NSDockPanel.java  NSDragCompletedEventArgs.java  NSDragDeltaEventArgs.java  NSDragStartedEventArgs.java  NSFontFamily.java  NSFrameworkElement.java  NSFreezableCollection.java  NSGeneratorPosition.java  NSGradientBrush.java  NSGradientStopCollection.java  NSGrid.java  NSGridSplitter.java  NSGridViewColumn.java  NSGridViewColumnHeader.java  NSGui_AlignmentX.java  NSGui_AlignmentY.java  NSGui_BrushMappingMode.java  NSGui_ClickMode.java  NSGui_ColorInterpolationMode.java  (+91 more)
java/src/main/java/dev/sixik/noesisgui/nshandlers/: NSDragCompletedEventHandler.java  NSDragDeltaEventHandler.java  NSDragStartedEventHandler.java  NSItemsChangedEventHandler.java  NSRequestNavigateEventHandler.java  NSSelectionChangedEventHandler.java
java/src/main/java/dev/sixik/noesisgui/nsmath/: NSAABBox.java  NSMatrix2.java  NSMatrix3.java  NSMatrix4.java  NSTransform2.java  NSTransform3.java  NSVector2.java  NSVector3.java  NSVector4.java
java/src/main/java/dev/sixik/noesisgui/nsrenderer/: NSBatch.java  NSBlendMode.java  NSDeviceCaps.java  NSMinMagFilter.java  NSMipFilter.java  NSRenderDevice.java  NSRenderState.java  NSRenderTarget.java  NSSamplerState.java  NSShader.java  NSShader_Enum.java  NSShader_Format_Attr_Enum.java  NSShader_Format_Attr_Type_Enum.java  NSShader_Format_Enum.java  NSShader_Vertex_Enum.java  NSStencilMode.java  NSTexture.java  NSTextureFormat.java  NSTile.java  NSUniformData.java  NSWrapMode.java
java/src/main/java/dev/sixik/noesisgui/utils/: HandleRef.java  NSMath.java  PtrObject.java
java/src/main/java/dev/sixik/noesisgui_impl/: NoesisGuiWidgets.java
java/src/main/java/dev/sixik/noesisgui_impl/loaders/: ClasspathXamlLoader.java  DebugXamlLoader.java  NoesisXamlLoader.java
java/src/main/java/dev/sixik/noesisgui_ini/: Main.java  NoesisGuiJava.java
java/src/main/java/dev/sixik/noesisgui_render/lwgl/: NoesisGlfwKeyMap.java
java/src/main/resources/native/win64/: noesis_jni.ilk
java/src/test/java/: LwjglNoesisDemo.java  NoesisTest.java
native/: CMakeLists.txt
native/NoesisSDK/Include/NsCore/: CpuProfiler.h
native/NoesisSDK/Include/NsGui/: BrushShader.h  CompositeTransform3D.h  CroppedBitmap.h  MatrixTransform3D.h
native/NoesisSDK/Lib/windows_x86_64/: NoesisApp.exp  NoesisApp.lib
native/includes/: DebugHFile.h
native/native_dll/win64/: noesis_jni.ilk
native/src/: NSNoesisGuiJni.cpp  jni.h
native/src/Debug/: NSDebugCpp.cpp
native/src/NsCore/: NSIViewJni.cpp  NsBaseComponentJni.cpp  NsDispatcherObjectJni.cpp  NsSymbolJni.cpp  NsTypeJni.cpp
native/src/NsDrawing/: NSColorJni.cpp  NSCornerRadiusJni.cpp  NSInt32RectJni.cpp
native/src/NsGui/: NSBaseButtonJni.cpp  NSBaseTextBoxJni.cpp  NSBoldJni.cpp  NSBrushJni.cpp  NSBrushesJni.cpp  NSButtonJni.cpp  NSCanvasJni.cpp  NSCheckBoxJni.cpp  NSColumnDefinitionCollectionJni.cpp  NSComboBoxJni.cpp  NSCommandBindingCollectionJni.cpp  NSDockPanelJni.cpp  NSGradientBrushJni.cpp  NSGridJni.cpp  NSGridSplitterJni.cpp  NSGridViewColumnHeaderJni.cpp  NSHyperlinkJni.cpp  NSIViewJni.cpp  NSImageBrushJni.cpp  NSInlineCollectionJni.cpp  NSInlineJni.cpp  NSInlineUIContainerJni.cpp  NSInputBindingCollectionJni.cpp  NSItalicJni.cpp  NSItemContainerGeneratorJni.cpp  NSLabelJni.cpp  NSLineBreakJni.cpp  NSLinearGradientBrushJni.cpp  NSListBoxJni.cpp  NSListViewJni.cpp  NSPageJni.cpp  NSPanelJni.cpp  NSPasswordBoxJni.cpp  NSRadialGradientBrushJni.cpp  NSRadioButtonJni.cpp  NSRepeatButtonJni.cpp  NSRowDefinitionCollectionJni.cpp  NSRunJni.cpp  NSSelectedItemsCollectionJni.cpp  NSSelectorJni.cpp  (+27 more)
native/src/NsRender/: NsRenderDeviceJni.cpp  NsRenderTargetJni.cpp
native/src/Render/: NsRenderContextJni.cpp
native/src/events/: NsFrameworkElementEventsJni.cpp  NsWidgetEvents.h
native/src/providers/: JniXamlProvider.cpp  JniXamlProvider.h  JniXamlProviderUtils.cpp  JniXamlProviderUtils.h
native/src/utils/: NSJniUtils.cpp  NSJniUtils.h
